# aril

./: .gitignore  AUTHORS  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h.in  configure  configure.ac
autom4te.cache/: output.1  requests  traces.0  traces.1
doc/: Makefile.in
garfeild/: Makefile.am  Makefile.in  garfeild.h
garfeild/calib/: CamAugmentation.cpp  CamAugmentation.h  CamCalibration.cpp  CamCalibration.h  camera.cpp  camera.h  gradient.cpp  matvec.cpp  matvec.h
garfeild/keypoints/: keypoint.h  keypoint_match.h  keypoint_orientation_corrector.cpp  keypoint_orientation_corrector.h  yape.cpp  yape.h
garfeild/lightcalib/: ipltexture.cpp  ipltexture.h  lightcollector.cpp  lightcollector.h  lightmap.cpp  lightmap.h  tri.cpp
garfeild/viewsets/: affine_image_generator.cpp  affine_image_generator.h  (+17 more)
samples/: Makefile.am  Makefile.in
samples/filedetect/: Makefile.am  Makefile.in  filedetect.cpp
samples/filedetect/filedetect.xcodeproj/: project.pbxproj
samples/filedetect/filedetect.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/multicam/: Makefile.am  Makefile.in  calibmodel.cpp  calibmodel.h  multicam.cpp  multigl.cpp  multigrab.cpp  multigrab.h
samples/multicam/multicam.xcodeproj/: project.pbxproj
samples/multicam/multicam.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
samples/singlecalib/: Makefile.am  Makefile.in  augment3d.cpp  singlecalib.cpp
samples/singlecalib/singlecalib.xcodeproj/: project.pbxproj
samples/singlecalib/singlecalib.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
starter/: Makefile.am  Makefile.in  starter.h
(+37 files in other folders)
